[gd_scene load_steps=5 format=3 uid="uid://cwa8vvpvie717"]

[ext_resource type="Script" uid="uid://cjiqps28j40p1" path="res://menus/disclaimer_preview.gd" id="1_sdtgw"]
[ext_resource type="Theme" uid="uid://dc5mof4oa3hlk" path="res://main_theme_for_hud_stuff.tres" id="2_dc7b5"]

[sub_resource type="Animation" id="Animation_gb6jq"]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("text2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("text:visible_ratio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("text:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 50]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sat5k"]
_data = {
&"fadeout": SubResource("Animation_gb6jq")
}

[node name="disclaimer_menu" type="Node2D"]
script = ExtResource("1_sdtgw")
text_to_display = {
0: "This fangame is not originally  mine. ",
1: "This is a revival of Megaman F    originally made by Mr Gambit.",
2: "Some sprites that werent made  by me and got modified are from his respective creators.",
3: "Megaman is owned by Capcom"
}

[node name="background" type="ColorRect" parent="."]
offset_right = 768.0
offset_bottom = 732.0
color = Color(0, 0, 0, 1)

[node name="text" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_top = 318.0
offset_right = 768.0
offset_bottom = 479.0
theme = ExtResource("2_dc7b5")
theme_override_font_sizes/font_size = 28
text = "abcdefghijklmopqrstuvwxyz"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
visible_characters = 0
visible_ratio = 0.0

[node name="AnimationPlayer_for_fadeout" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sat5k")
}

[node name="timer" type="Timer" parent="."]
wait_time = 0.2

[node name="text2" type="RichTextLabel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = 7.0
offset_top = 262.0
offset_right = 258.0
offset_bottom = 349.0
scale = Vector2(3, 3)
theme = ExtResource("2_dc7b5")
text = "fdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkk"

[connection signal="animation_finished" from="AnimationPlayer_for_fadeout" to="." method="_on_animation_player_for_fadeout_animation_finished"]
